# Chkdraft

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Chkdraft.sln  ChkdraftProjectSetup.txt  LICENSE.txt  OnlyMappingCoreTests.playlist  README.md  Resource.aps  Resource.rc  To Release.txt  vcpkg-configuration.json
src/: CMakeLists.txt  main.cpp  resource.rc  vcpkg.json
src/chkdraft/: CMakeLists.txt  chkdraft.cpp  chkdraft.h  temptest.h  temptestdo.cpp  temptestprint.cpp  temptestredo.cpp  temptestundo.cpp  vcpkg.json
src/chkdraft/common_files/: common_files.h  constants.cpp  constants.h  debug.cpp  debug.h  resource.h  structs.cpp  structs.h  version.cpp  version.h
src/chkdraft/mapping/: animation.cpp  animation.h  chkd_plugins.cpp  chkd_plugins.h  chkd_profiles.cpp  chkd_profiles.h  chkd_skin.h  clipboard.cpp  clipboard.h  clipboard_animations.cpp  clipboard_animations.h  data_file_browsers.cpp  data_file_browsers.h  game_clock.h  gui_map_gl_graphics.cpp  gui_map_gl_graphics.h  map_actor.cpp  map_actor.h  map_animations.cpp  map_animations.h  map_image.cpp  map_image.h  memory_tiered_tasks.h  sc_gdi_graphics.cpp  sc_gdi_graphics.h  sc_gl_graphics.cpp  sc_gl_graphics.h  sc_graphics.cpp  sc_graphics.h  sc_graphics2.cpp  scr_graphics.cpp  scr_graphics.h  selections.cpp  selections.h  settings.cpp  settings.h  wgl_render_context.h
src/chkdraft/mapping/opengl/gl/: base.h  context_semaphore.h  font.h  program.h  shader.h  texture.h  uniform.h  vertices.h
src/chkdraft/mapping/undos/: reversibles.cpp  reversibles.h  undos.cpp  undos.h
src/chkdraft/mapping/undos/chkd_undos/: cut_copy_paste_change.cpp  cut_copy_paste_change.h  dimension_change.cpp  dimension_change.h  doodad_change.cpp  doodad_change.h  doodad_create_del.cpp  doodad_create_del.h  fog_change.cpp  fog_change.h  isom_change.cpp  isom_change.h  location_change.cpp  location_change.h  location_create_del.cpp  location_create_del.h  location_move.cpp  location_move.h  mtxm_change.cpp  mtxm_change.h  sprite_change.cpp  sprite_change.h  sprite_create_del.cpp  sprite_create_del.h  sprite_index_move.cpp  sprite_index_move.h  tile_change.cpp  tile_change.h  undo_types.h  unit_change.cpp  unit_change.h  unit_create_del.cpp  unit_create_del.h  unit_index_move.cpp  unit_index_move.h
src/chkdraft/ui/chkd_controls/: chkd_string_input.cpp  chkd_string_input.h  cnd_act_grid.cpp  cnd_act_grid.h  cuwp_input.cpp  cuwp_input.h  doodad_tree.cpp  doodad_tree.h  history_tree.cpp  history_tree.h  input_dialog.cpp  input_dialog.h  isom_tree.cpp  isom_tree.h  location_tree.cpp  location_tree.h  main_tree.cpp  main_tree.h  move_to.cpp  move_to.h  peer_list_box.cpp  peer_list_box.h  player_dropdown.cpp  player_dropdown.h  sprite_tree.cpp  sprite_tree.h  suggestions.cpp  suggestions.h  tech_tree.cpp  tech_tree.h  unit_tree.cpp  unit_tree.h  upgrade_tree.cpp  upgrade_tree.h
src/chkdraft/ui/dialog_windows/: about.cpp  about.h  actor_properties.cpp  actor_properties.h  dialog_windows.h  dimensions.cpp  dimensions.h
src/chkdraft/ui/main_windows/: gui_map.cpp  gui_map.h  gui_map_printer.cpp  left_bar.cpp  left_bar.h  logger_window.cpp  logger_window.h  main_plot.cpp  main_plot.h  main_toolbar.cpp  main_toolbar.h  maps.cpp  maps.h  mini_map.cpp  mini_map.h
src/cross_cut/: CMakeLists.txt  command_types.h  commander.cpp  commander.h  error_handler.cpp  error_handler.h  generic_command.cpp  generic_command.h  logger.cpp  logger.h  simple_icu.cpp  test_commands.cpp  test_commands.h  updater.cpp  updater.h  vcpkg.json
src/map_gfx_utils/: CMakeLists.txt  CMakePresets.json  gfx_util.cpp  gfx_util.h  lato.ttf.cpp  main.cpp  map_timings.h  renderer.cpp  renderer.h  sc_map.cpp  sc_map.h  screenshot.cpp  screenshot.h  test.cpp  test.h  vcpkg-configuration.json  vcpkg.json
src/mapping_core/: CMakeLists.txt  action_descriptor.h  archive_cluster.cpp  archive_cluster.h  archive_file.cpp  archive_file.h  basics.cpp  basics.h  casc_archive.cpp  casc_archive.h  chk.cpp  chk.h  escape_strings.cpp  escape_strings.h  file_browser.cpp  file_browser.h  folder_archive.cpp  folder_archive.h  lite_map_file.cpp  lite_map_file.h  lite_scenario.cpp  lite_scenario.h  map_actor.h  map_data.h  map_file.cpp  map_file.h  map_image.h  mapping_core.h  mpq_asset_manager.cpp  mpq_asset_manager.h  mpq_file.cpp  mpq_file.h  sc.cpp  sc.h  scenario.cpp  scenario.h  scenario_print.cpp  scenario_redo.cpp  scenario_undo.cpp  sha256.cpp  (+9 more)
src/mapping_core/opengl/gl/: base.h  camera.h  font.h  fps.h  program.h  shader.h  texture.h  uniform.h  utils.h  vertices.h
src/mapping_core/opengl/glad/: utils.h
src/mapping_core/opengl/glfw/: context.h  window.h
src/mapping_core/render/: color_cycler.h  game_clock.h  map_actor.cpp  map_actor.h  map_animations.cpp  map_animations.h  map_image.cpp  map_image.h  sc_gl_graphics.cpp  sc_gl_graphics.h  sc_mini_map.cpp  sc_mini_map.h
src/windows/: CMakeLists.txt  button_control.cpp  button_control.h  check_box_control.cpp  check_box_control.h  class_dialog.cpp  class_dialog.h  class_window.cpp  class_window.h  context_menu.cpp  context_menu.h  device_context.h  drag_list_control.cpp  drag_list_control.h  dropdown_control.cpp  dropdown_control.h  edit_control.cpp  edit_control.h  file_system.cpp  file_system.h  grid_item.cpp  grid_item.h  grid_view.cpp  grid_view.h  group_box_control.cpp  group_box_control.h  list_box_control.cpp  list_box_control.h  list_view_control.cpp  list_view_control.h  mdi_client.cpp  mdi_client.h  popup.cpp  popup.h  radio_button_control.cpp  radio_button_control.h  resource_manager.h  rich_edit_control.cpp  rich_edit_control.h  status_control.cpp  (+18 more)
test/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
test/chkdraft/: CMakeLists.txt  chkd_profiles_test.cpp  chkd_skin_test.cpp  constants_test.cpp  vcpkg.json
test/cross_cut/: CMakeLists.txt  logger_test.cpp  vcpkg.json
test/mapping_core/: CMakeLists.txt  basics_test.cpp  mini_map_test.cpp  mini_map_test_data.h  system_io_test.cpp  test_assets.cpp  test_assets.h  text_trig_compiler_test.cpp  vcpkg.json
test/windows/: CMakeLists.txt  vcpkg.json
(+1061 files in other folders)
